--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,6 +18,7 @@
   &__logo {
     width: 20px;
     height: auto;
+    cursor: pointer;
 
     @include sm {
       width: 40px;
@@ -30,5 +31,25 @@
 
   &__hint {
     display: none;
+  }
+
+  &__button {
+    position: relative;
+    width: 60px;
+    height: 60px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: url("/assets/svg/plus.svg");
+      background-size: cover;
+    }
   }
 }
