finishing with modal component

--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -1,20 +1,39 @@
 <div class="modal">
-  <form class="modal__form" (ngSubmit)="onSubmit()">
+  <form class="modal__form" [formGroup]="newsForm" (ngSubmit)="onSubmit()">
     <div class="modal__header">
-      <h3 class="modal__title h2">Добавить новость</h3>
-      <button class="modal__button" type="button">
-        <span class="modal__button-hint">Закрыть модальное окно</span>
+      <h3 class="modal__title h2">{{ formSubmitted ? 'Готово' : 'Добавить новость' }}</h3>
+      <button (click)="closeModal()" class="modal__close-button" type="button">
+        <span class="modal__hint">Закрыть модальное окно</span>
       </button>
     </div>
-    <input class="modal__input p" type="text" id="title" name="title" placeholder="Заголовок" required [(ngModel)]="formData.title">
-    <textarea class="modal__textarea p" type="text" id="text" name="text" placeholder="Текст" required [(ngModel)]="formData.text"></textarea>
+    <div class="modal__content" *ngIf="!formSubmitted else success">
+      <input class="modal__input p" type="text" id="title" name="title" placeholder="Заголовок" required formControlName="title">
+      <textarea class="modal__textarea p" type="text" id="text" name="text" placeholder="Текст" required formControlName="text"></textarea>
       <div class="modal__footer">
-      <label class="modal__upload">
-        <span class="modal__upload-hint">Загрузить изображение</span>
-        <input (change)="onFileSelected($event)" class="modal__upload-input" type="file" id="image" name="image" required>
-      </label>
-      <button class="modal__submit" type="submit">Опубликовать новость</button>
-
+        <label class="modal__upload">
+          <span class="modal__upload-hint">Загрузить изображение</span>
+          <input (change)="onFileSelected($event)" class="modal__upload-input" type="file" id="image" name="image" required formControlName="image">
+        </label>
+        <div class="modal__upload-image-box" *ngIf="imageBase64">
+          <img class="modal__upload-image" [src]="imageBase64">
+          <button class="modal__remove-image" (click)="removeImage()">
+            <span class="modal__hint">Удалить изображение</span>
+          </button>
+        </div>
+        <button class="modal__submit" type="submit" [disabled]="!newsForm.valid" >Опубликовать новость</button>
+      </div>
     </div>
   </form>
 </div>
+
+<ng-template #success>
+  <div class="modal__success">
+    <div class="modal__wrapper">
+      <div class="modal__success-image-box">
+        <img class="modal__success-image" [src]="imageBase64">
+      </div>
+      <p class="p">{{ newsForm.controls['title'].value }}</p>
+    </div>
+    <button class="modal__success-close" type="button" (click)="onSuccessHandle()">Окей</button>
+  </div>
+</ng-template>
