--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,4 +11,4 @@
   <router-outlet></router-outlet>
 </div>
 
-<app-modal *ngIf="isModalOpen"></app-modal>
+<app-modal *ngIf="isModalOpen" (modalIsClosed)="onModalClosedEvent()"></app-modal>
