--- a/src/app/components/news-item/news-item.component.scss
+++ b/src/app/components/news-item/news-item.component.scss
@@ -9,7 +9,7 @@
   padding: 32px 0;
 
   &__title {
-    margin-bottom: 16px;
+    margin-bottom: $size-1;
 
     @include md {
       margin-bottom: 40px;
@@ -19,8 +19,8 @@
   &__image-box {
     width: 100%;
     height: 343px;
-    margin-bottom: 16px;
-    border-radius: 32px;
+    margin-bottom: $size-1;
+    border-radius: $size-2;
     overflow: hidden;
 
     @include sm {
@@ -51,7 +51,7 @@
 
   &__date-box {
     padding: 8px 12px;
-    margin-bottom: 16px;
+    margin-bottom: $size-1;
     border-radius: 25px;
     background-color: $black-05;
   }
