--- a/src/app/components/news-list/news-list.component.scss
+++ b/src/app/components/news-list/news-list.component.scss
@@ -3,7 +3,7 @@
 @import "../../../assets/styles/mixins/media";
 
 .news-list {
-  padding: 24px 0;
+  padding: $size-1h 0;
 
   @include md {
     padding: 40px 0;
@@ -20,7 +20,7 @@
   &__grid {
     display: grid;
     grid-template-columns: 1fr;
-    grid-gap: 24px;
+    grid-gap: $size-1h;
 
     @include sm {
       grid-template-columns: repeat(2, 1fr);
@@ -40,8 +40,8 @@
   &__image-box {
     width: 100%;
     height: 343px;
-    margin-bottom: 16px;
-    border-radius: 32px;
+    margin-bottom: $size-1;
+    border-radius: $size-2;
     overflow: hidden;
 
     @include sm {
@@ -58,7 +58,7 @@
 
   &__date-box {
     padding: 8px 12px;
-    margin-bottom: 16px;
+    margin-bottom: $size-1;
     border-radius: 25px;
     background-color: $black-05;
   }
