--- a/src/assets/styles/_wrappers.scss
+++ b/src/assets/styles/_wrappers.scss
@@ -1,12 +1,13 @@
 @import 'mixins/media';
+@import 'variables';
 
 .container {
   width: 100%;
   max-width: 1440px;
-  padding: 0 16px;
+  padding: 0 $size-1;
   margin: 0 auto;
 
   @include sm {
-    padding: 0 32px;
+    padding: 0 $size-2;
   }
 }
